# GrandOrgue-official

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt
.github/workflows/: build.yml
build-scripts/: set-ver-prms.sh
build-scripts/for-appimage-x86_64/: build-on-linux.sh
build-scripts/for-github/: autotag.sh
build-scripts/for-linux/: build-for-tests.sh  build-on-linux.sh  do-tests.sh  prepare-debian-based.sh  prepare-fedora.sh  prepare-parse-prms.bash
build-scripts/for-linux-aarch64/: build-on-linux.sh
build-scripts/for-linux-armhf/: build-on-linux.sh
build-scripts/for-osx/: build-on-osx.sh
build-scripts/for-win64/: build-on-linux.sh
cmake/: BuildExecutable.cmake  BuildLibrary.cmake
help/: grandorgue.xml
src/core/: GOWave.cpp  ptrvector.h
src/grandorgue/: CMakeLists.txt  GOApp.cpp  GOApp.h  GOAudioRecorder.cpp  GODocument.cpp  GODocument.h  GOImageCache.cpp  GOImageCache.h  GOKeyConvert.cpp  GOKeyConvert.h  GOMetronome.cpp  (+4 more)
src/tests/testing/: CMakeLists.txt  GOTestOrganController.cpp  GOTestOrganController.h
src/tests/testing/model/: GOTestDrawStop.cpp  GOTestWindchest.cpp
src/tests/testing/resources/: minimal.organ
src/tests/testing/sound/: GOTestSoundCallbackConnector.cpp  GOTestSoundCallbackConnector.h  GOTestSoundOrganEngine.cpp  GOTestSoundOrganEngine.h  GOTestSoundOrganEngineBase.cpp  GOTestSoundOrganEngineBase.h  GOTestSoundOrganEngineStress.cpp  GOTestSoundOrganEngineStress.h
src/tests/testing/sound/buffer/: GOTestPerfSoundBufferMutable.cpp  GOTestSoundBufferMutable.cpp
src/tests/testing/sound/playing/: GOTestSoundStream.cpp
(+154 files in other folders)
